# corpus-x

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  fly.toml  index.html  litestream.yml  mkdocs.yml  nb.ipynb  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
.x.db-litestream/: generation
.x.db-litestream/generations/080aee1e756ffe59/wal/: 00000000.wal
.x.db-litestream/generations/49f0b5b399a6d60f/wal/: 00000000.wal  00000001.wal
.x.db-litestream/generations/4fe1e5336d88e6d2/wal/: 00000000.wal
.x.db-litestream/generations/c62072c1993ed3ba/wal/: 00000000.wal
.x.db-litestream/generations/c680b9db70504d8b/wal/: 00000000.wal  00000001.wal
.x.db-litestream/generations/dbd3ffd89a764e6e/wal/: 00000000.wal
.x.db-litestream/generations/e45acd679f1a4942/wal/: 00000000.wal
.x.db-litestream/generations/ed5b5cee38747e14/wal/: 00000000.wal  00000001.wal
.x.db-litestream/generations/fe99a72ac5efadb9/wal/: 00000000.wal
app/: requirements.txt
app/.x.db-litestream/: generation
app/.x.db-litestream/generations/d4cb93a1d08cbeb2/wal/: 00000000.wal
app/db/: settings.json
app/etc/: litestream.yml  metadata.yml
app/scripts/: run.sh
codes/: index.html
corpus_x/: __init__.py  __main__.py  codifications.py  documents.py  inclusions.py  nb.ipynb  resources.py  statutes.py
corpus_x/sql/codes/: list_event_statutes.sql
corpus_x/sql/codes/events/: set_statute_id.sql  set_statute_unit_mp.sql
corpus_x/sql/decisions/: list_opinions_of_decision.sql
corpus_x/sql/statutes/: list_affected_statutes.sql  list_affector_statutes.sql
corpus_x/utils/: __init__.py  _loggers.py  del_tables.py  files.py  history.py  segmentize.py  setup.py  shortcuts.py
docs/: 1-setup.md  2-pre-inclusions.md  3-post-inclusions.md  4-aws-replicate.md  4-container.md  5-db-evaluate.md  5-remote.md  add.md  codes.md  evaluation.md  flow.md  inclusions.md  index.md  replication.md  statutes.md
evaluation/: index.html
flow/: index.html
inclusions/: index.html
notebooks/: analyze.ipynb  checker.ipynb  clear_x_only.ipynb  match.ipynb  q.ipynb  query.ipynb  setup.ipynb  update.ipynb
replication/: index.html
search/: search_index.json
statutes/: index.html
tests/: conftest.py  test_statute.py  test_version.py
tests/data/codifications/1987/: mv-const-1987-v1.yaml
tests/data/decisions/legacy/c343d/: body.html
tests/data/decisions/sc/62206/: body.html
tests/data/statutes/const/1935/: const1935.yaml  details.yaml
tests/data/statutes/const/1973/: const1973.yaml  details.yaml
tests/tests/: conftest.py  test_clean_ponencia_names.py  test_tables.py
