[tool.poetry]
name = "corpus-x"
version = "0.0.1"
description = "Create the full corpus based on prior packages corpus-base and corpus-pax."
authors = ["Marcelino G. Veloso III <mars@veloso.one>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
corpus-base = "^0.0.11"   # has corpus-pax, sqlpyd, citation-utils
statute-trees = "^0.0.17" # has citation-utils, statute-patterns
ipykernel = "^6.19.2"
notebook = "^6.4.11"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
rich = "^12.6"
pytest = "^7.2"
pytest-datadir = "^1.4.1"
pytest-instafail = "^0.4.2"
pytest-cov = "^2.12.1"
mypy = "^0.991"
pre-commit = "^2.20"
types-Markdown = "^3.4.0"
types-PyYAML = "^6.0.7"
types-python-slugify = "^5.0.4"
types-python-dateutil = "^2.8.19"
notebook = "^6.5.2"

[tool.pytest.ini_options]
filterwarnings = ['ignore::DeprecationWarning']

[tool.pytest]
minversion = "7.2"
addopts = "-ra -q --cov=corpus_x tests/"
testpaths = ["tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
include_trailing_comma = 'True'

[tool.black]
line-length = 79
include = '.pyi?$'
exclude = '''
/(
    .git
    | .hg
    | .mypy_cache
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
)/
'''


[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
